# ChangeLog for net-im/gaim
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/gaim/ChangeLog,v 1.140 2004/03/08 20:11:07 rizzo Exp $

  08 Mar 2004; Don Seiler <rizzo@gentoo.org>; gaim-0.75-r10.ebuild,
  gaim-0.75-r8.ebuild, gaim-0.75-r9.ebuild:
  Taking out note about gaim devs not liking gentoo users.

  01 Mar 2004; Don Seiler <rizzo@gentoo.org>; gaim-0.75-r10.ebuild,
  gaim-0.75-r8.ebuild, gaim-0.75-r9.ebuild:
  Removing sys-libs/db as a DEPEND. Thanks to Michael Mikhulya for pointing it
  out.  Fixed Bug #43187.

  26 Feb 2004; Don Seiler <rizzo@gentoo.org>; gaim-0.72-r1.ebuild,
  gaim-0.72-r2.ebuild, gaim-0.72.ebuild, gaim-0.74-r2.ebuild,
  gaim-0.75-r5.ebuild, gaim-0.75-r6.ebuild, gaim-0.75-r7.ebuild,
  files/gaim-0.72-msn-fixes.patch, files/gaim-0.74-log_free.patch,
  files/gaim-0.74-scs-msg-yahoo.patch,
  files/gaim-encryption-2.18-moz1.6.patch, files/gaim_cjk_gtkconv.patch,
  files/gaim_gtkimcontext_patch.diff:
  Pruning obsolete ebuilds and patch files

  26 Feb 2004; Gustavo Zacarias <gustavoz@gentoo.org> gaim-0.75-r8.ebuild:
  stable on hppa

*gaim-0.75-r10 (25 Feb 2004)

  25 Feb 2004; Don Seiler <rizzo@gentoo.org>; gaim-0.75-r10.ebuild,
  files/gaim-0.74-gnome-url-handler.patch:
  Added support for gnome-url-handler if USE=gnome. Thanks to Chris 'wolf31o2'
  Gianelloni

  18 Feb 2004; Don Seiler <rizzo@gentoo.org>; gaim-0.75-r8.ebuild,
  gaim-0.75-r9.ebuild:
  Added postinst warning against seeking help from gaim developers

*gaim-0.75-r9 (18 Feb 2004)

  18 Feb 2004; Don Seiler <rizzo@gentoo.org>; gaim-0.75-r9.ebuild,
  files/gaim-0.76cvs-yahoo-misc-fixes-1.diff:
  Revision bump for yahoo fix.  Thanks to Patrick McLean

  18 Feb 2004; Don Seiler <rizzo@gentoo.org>; gaim-0.67.ebuild:
  Removing obsolete 0.67 files

  17 Feb 2004; Aron Griffis <agriffis@gentoo.org> gaim-0.75-r8.ebuild:
  stable on alpha and ia64

  12 Feb 2004; Don Seiler <rizzo@gentoo.org>; gaim-0.75-r8.ebuild: