@@ -1,13 +1,11 @@
-MD5 6d48f35300e6f9f54879f8aabf9a97a3 gaim-0.75-r9.ebuild 3593
 MD5 976c865c826433c4555e254fa2559b02 gaim-0.75-r10.ebuild 3707
-MD5 26da82f6f8e718b2361c0ad9f4ca72c8 ChangeLog 23730
+MD5 9734907efffcaccb294f3651f2710d12 ChangeLog 23825
 MD5 19b3cafbbe380403d46cccc45a984b80 metadata.xml 481
 MD5 9d5515c945d57bf1a0d08e2cbc0bfa3f gaim-0.75-r8.ebuild 3536
 MD5 4989dc76d941288934c783f52931762d files/gaim-0.75-static-prpls.patch 3710
 MD5 a714a5babbb4387f5a5516f75548528a files/gaim-0.76cvs-yahoo-misc-fixes-1.diff 3105
 MD5 68525b8389e356a5d05d531b84fb1ada files/gaim-0.74-gnome-url-handler.patch 1854
 MD5 8b152d59a54ab95627c4c0cd52758d75 files/digest-gaim-0.75-r8 63
-MD5 8b152d59a54ab95627c4c0cd52758d75 files/digest-gaim-0.75-r9 63
 MD5 a4f3b00a7aa80e7fbc1e315b8c9306c8 files/gaim-0.76cvs-signals-varargs.diff 1753
 MD5 53302cc68bb7bef9803723e977010339 files/gaim-0.74_cjk_gtkconv.patch 1128
 MD5 e58ee6f06747da85a60cb9c13b91f805 files/gaim-0.76cvs-yahoo-login-fix.diff 4618
