@@ -1,6 +1,9 @@
 # ChangeLog for net-im/gaim
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gaim/ChangeLog,v 1.140 2004/03/08 20:11:07 rizzo Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gaim/ChangeLog,v 1.141 2004/03/09 16:24:30 rizzo Exp $
+
+  08 Mar 2004; Don Seiler <rizzo@gentoo.org>; gaim-0.75-r9.ebuild:
+  Removing obsolete ebuild
 
   08 Mar 2004; Don Seiler <rizzo@gentoo.org>; gaim-0.75-r10.ebuild,
   gaim-0.75-r8.ebuild, gaim-0.75-r9.ebuild:
